# Exercise

./: .gitignore  Functor.cpp  LinkedList.cpp  Observer.cpp  PriorityQueue.cpp  README.md  SFINEY.cpp  Stack.cpp  Temp.cpp  TemplateTemplate  Type_traits.cpp  Undo.cpp  VariadicTemplate.cpp  WrapNamespace.md  extensible_templates.cpp
Cloneability/: CMakeLists.txt  IsDerivedFrom_One.h  main.cpp
Concurrency/: .gitignore  CMakeLists.txt
Concurrency/inc/: Async.h  AsyncFile.h  LambdaObserver.h  SqliteExercise.h
Concurrency/lib/: liblogger.dylib
Concurrency/log/: Log.txt
Concurrency/logger/: CMakeLists.txt  LogPolicy.h  LogWritter.h  LogWritter.hpp  Logger.h  Logger.hpp
Concurrency/src/: Async.cpp  AsyncFile.cpp  ConditionVariable.cpp  LambdaObserver.cpp  SqliteExercise.cpp
ModernCpp/: GlueingLegacyCode.cpp  PolicyBasedDesign  PolicyBasedDesign.cpp  Tuple.cpp  browse.VC.db
ModernCpp/logger/: LogPolicy.hpp
QtExercise/: CMakeLists.txt  Cloneable.h  HasCloneFunction.h  IsDerivedFrom_Combined.h  IsDerivedFrom_Two.h
SnakeGame/: CMakeLists.txt  Food.h  Game.cpp  Game.h  Point.h  Snake.cpp  Snake.h  Stage.cpp  Stage.h  main.cpp
SqliteExercise/: CMakeLists.txt
SqliteExercise/inc/: Connection.h  Database.h  Database.hpp  Exception.hpp  Statement.h  Statement.hpp
SqliteExercise/logger/: LogPolicy.h  LogPolicy.hpp  LogWritter.h  LogWritter.hpp  Logger.h
SqliteExercise/src/: Connection.cpp  Database.cpp  SqliteExercise.cpp  main.cpp
TCP/: Client.cpp  Server.cpp  TCPClient.cpp  TCPClient.h  TCPServer.cpp  TCPServer.h  TCPStream.cpp  TCPStream.h
Template/: FunctionSpecialization.cpp  TemplateTemplate.cpp
TryAgain/: CMakeLists.txt  TryAgain_1.cpp
project_template/: CMakeLists.txt
project_template/app_project/: CMakeLists.txt
project_template/app_project/src/: main.cpp
project_template/lib_project/: CMakeLists.txt
project_template/lib_project/inc/: mylib.h
project_template/lib_project/src/: mylib.cpp
